--- a/trunk/slide/mkslide/slide.conf
+++ b/trunk/slide/mkslide/slide.conf
@@ -1,6 +1,6 @@
 ---
 macro:
-    title:      mkslide 사용하기
+    title:      Design Pattern in Perl: Singleton
     link:       http://localhost/index.html
     email:      keedi@naver.com
     name:       keedi (김도형)
