KPW2008 :: Static::Simple , 정적 HTML,CSS,JS 는 Framework Static 관리공간에서 관리하도록 함.

--- a/trunk/www-framework/kpw/config.yaml
+++ b/trunk/www-framework/kpw/config.yaml
@@ -1,6 +1,20 @@
 default:
   name: Kpw
 
+  static:
+    dirs:
+      - img
+      - css
+      - js
+    include_path:
+      - __path_to(./html)__
+    ignore_dirs:
+      - __path_to(./template)__
+    ignore_extensions:
+      - tmpl
+      - tt
+      - tt2
+
   V:
     DEFAULT: TT
 ---
