--- a/www-framework/kpw/config.yaml
+++ b/www-framework/kpw/config.yaml
@@ -24,13 +24,19 @@ default:
   status:
     wait:
       name: 메일 미확인
-      message: 사전등록 절차가 제대로 끝나지 않았습니다.
+      message: 사전 등록 절차가 제대로 끝나지 않았습니다.
     reserv:
       name: 등록비 미확인
-      message: 등록비 확인이 되지 않았습니다. 등록비를 입금하지 않으셨을 경우 아래의 금액을 계좌로 입금해주세요.
+      message: 사전 등록은 하셨으나 등록비 확인이 되지 않았습니다.
     complete:
       name: 사전 등록 완료
-      message: Korean Perl Workshop 2008 에 등록해주셔서 감사합니다. 행사 당일 뵙겠습니다.
+      message: 사전 등록을 마치셨으며 등록비 입금 확인도 완료했습니다.
+    speaker:
+      name: 발표자 등록 완료
+      message: 발표자로써 사전 등록을 마치셨습니다.
+    sponsor:
+      name: 스폰서 쿼터 사전 등록 완료
+      message: 행사를 지원해주신 스폰서에 할당받은 자리를 이용해서 사전 등록을 마치셨습니다.
 
   messages:
     email:
