*   slide.conf, index.txt     -   잘못 커밋한 부분 되돌림 *   mkslide-helper.pl     -   오타 정정 *   mkslide.pl     -   에러메시지 출력 형식 수정

--- a/slide/mkslide/slide.conf
+++ b/slide/mkslide/slide.conf
@@ -1,6 +1,6 @@
 ---
 macro:
-    title:      Design Pattern in Perl: Singleton
+    title:      mkslide 사용하기
     link:       http://localhost/index.html
     email:      keedi@naver.com
     name:       keedi (김도형)
