--- a/slide/mkslide/slide.conf
+++ b/slide/mkslide/slide.conf
@@ -2,7 +2,7 @@
 macro:
     title:      mkslide 사용하기
     link:       http://localhost/index.html
-    email:      keedi@naver.com
+    email:      keedi.k@gmail.com
     name:       keedi (김도형)
     company:    Emstone
     community:  Perlmania
@@ -10,4 +10,5 @@ path:
     css:        slide.css
     javascript: slide.js
     images:     images
-
+logo:
+    template: images/template.png
